welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:55: error: ';' expected but '(' found.
	gauche();
              ^